--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,11 @@
 }
 
 .colour-border{
-  border: 3px solid rgb(128, 62, 0);
+  border: 3px solid orange;
   padding: 10px;
 }
 
 .header{
   padding: 10px;
 }
+
